input / button outline fix on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -49,4 +49,16 @@ body{
     font-weight: bold;
     color: rgba(43, 42, 42, 0.795);
 }
+input,button{
+    outline: none;
+}
+.selected{
+    border: 4px solid gold;
+    border-radius: 5px;
+}
+@media screen and (min-width: 320px) and (max-width: 767px){
+    .selected{
+        border: 2.5px solid gold;
+    }
+}
 
